crates/swc_ecma_parser/tests/test262-error-references/fail/c510fa0f191310ed.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/c510fa0f191310ed.js:1:6
  |
1 | ({a: b += 0} = {})
  |      ^^^^^^

